--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "animejs": "^3.2.1"
   }
 }
